<resources>
    <string name="app_name">GO-CORONA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="guesssans_black">GuessSans_Black.otf</string>
    <string name="complete_your_registration_to_join_us">Complete your registration to Join Us.</string>
    <string name="campton_medium">Campton_Medium.ttf</string>
    <string name="campton_bold">Campton_Bold.ttf</string>
    <string name="first_name">First Name*</string>
    <string name="full_name">Full Name*</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="pincode">Pincode*</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="others">Others</string>
    <string name="field_cannot_be_blank">This field cannot be blank</string>
    <string name="error_gender">Please select gender</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="mobile_is_invalid">Mobile is invalid</string>
    <string name="pincode_is_invalid">Pincode is invalid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="password_is_invalid_must_be">Password is invalid, must be 4 or more character long</string>
    <string name="password">Password*</string>
    <string name="retype_password">Retype password*</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="account_setup">Account Setup</string>
    <string name="email_address">Email address</string>
    <string name="submit">Submit</string>
    <string name="city">Area*</string>
    <string name="search_by_country">Search by Country</string>
    <string name="search">Search</string>
    <string name="join_us">JOIN US</string>
    <string name="join_us_s">Join Us</string>
    <string name="general">General</string>
    <string name="select_city">Select Area*</string>
    <string name="select_constituency">Select Constituency*</string>
    <string name="select_district">Select District*</string>
    <string name="empty" />
    <string name="select_country_code">Select Country Code</string>
    <string name="mobile_no">Mobile Number*</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_state">Please select State</string>
    <string name="select_state">Select State*</string>
    <string name="error_district">Please select District</string>
    <string name="error_city">Please select Area</string>
    <string name="error_constituency">Please select Constituency</string>
    <string name="home">Home</string>
    <string name="our_network">Our Network</string>
    <string name="current_issue">Current Issues</string>
    <string name="social_buzz">Social Buzz</string>
    <string name="share">Share</string>
    <string name="punjabi_ekta_party">Punjabi Ekta Party</string>
    <string name="sukhpal_khaira">S. Sukhpal Singh Khaira</string>
    <string name="publish_date">Publish Date:</string>
    <string name="response_empty">response empty</string>
    <string name="event">Events</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="logout">LOGOUT</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="gallery">Gallery</string>
    <string name="videos">Videos</string>
    <string name="published_at">Published At:</string>
    <string name="terms_conditions"><![CDATA[terms & conditions]]></string>
    <string name="reg_lbl_agree_with_tnc">By signing up, I agree with terms &amp; conditions</string>
    <string name="reg_lbl_already_member">Already a member?</string>
    <string name="reg_btn_login">LOGIN</string>
    <string name="bkg_error">Background Error</string>
    <string name="back_press">Please click BACK again to exit</string>
    <string name="next">Next</string>
    <string name="ai_based_symptoms_check_for_covid19">AI based symptoms check for COVID-19</string>
    <string name="todo" />
    <string name="know_if_you_have_met_a_covid_ve_person">Know if you have met a COVID+ve person</string>
    <string name="what_is_your_height">What is your height ?</string>
    <string name="tell_symptoms">Please tell us about your symtoms</string>
    <string name="fever">Do you have fever?</string>
</resources>
